# ClosedClaw

./: .cfignore  .gitignore  .pre-commit-config.yaml  26  CHANGELOG.md  CLOSEDCLAW-PLAN.md  CONSTANTS-ENHANCEMENT-ANALYSIS.md  CONTRIBUTING.md  ClosedClawRepositoryAudit.md  Dockerfile  Dockerfile.sandbox-browser  PLATFORM-REMOVAL-COMPLETION.md  PLATFORM-REMOVAL-PROGRESS.md  README.md  README.old.md  REPOSITORY-REVIEW-2026-02-10.md  SECURITY.md  TEST-FIXES-GUIDE.md  TODO.md  docker-compose.yml  docker-setup.sh  fly.private.toml  fly.toml  manifest.yml  package.json  plan-seamlessLaunchExperience.prompt.md  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  tmp-debug-fix.ts  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts  vitest.extensions.config.ts  vitest.live.config.ts  vitest.workspace.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  labeler.yml
apps/gtk-gui/: README.md  ai.closedclaw.messenger.desktop  ai.closedclaw.messenger.metainfo.xml  closedclaw_messenger.py  launch.sh  meson.build  run.sh  test_ipc_server.py
archive/: PLATFORM-REMOVAL-COMPLETION.md  README.md
docs/: CNAME  README.md  _config.yml  bedrock.md  brave-search.md  broadcast-groups.md  date-time.md  debugging.md  docs.json  environment.md  hooks.md  index.md  logging.md  multi-agent-sandbox-tools.md  network.md  northflank.mdx  perplexity.md  pi-dev.md  pi.md  plugin.md  prose.md  railway.mdx  render.mdx  scripts.md  testing.md  token-use.md  tts.md  tui.md  vps.md
git-hooks/: pre-commit
scripts/: auth-monitor.sh  canvas-a2ui-copy.ts  clawlog-linux.sh  (+19 more)
(+2729 files in other folders)
